--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -13,7 +13,7 @@ parts:
       - --prefix=/usr
       - --with-heic=yes
       - --with-rsvg=yes
-      - --disable-docs=yes
+      - --disable-docs
   halftone:
     after: [magick]
     # See 'snapcraft plugins'
