--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,6 +22,7 @@ parts:
       - blueprint-compiler
     stage-packages:
       - libmagickwand-6.q16-6
+      - libtiff5
     override-build: |
       craftctl default
       mkdir -p $CRAFT_PART_INSTALL/meta/gui
