--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,26 +5,39 @@ version: '0.2.0'
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
-parts:      
+parts:     
+  magick:
+    plugin: autotools
+    source: https://github.com/ImageMagick/ImageMagick.git
+    source-commit: "920f79206ff59f30a4cff22c9c9c393508b82663"
+    autotools-configure-parameters:
+      - --prefix=/usr
+      - --with-heic=yes
+      - --with-rsvg=yes 
+      - --with-modules=yes
+      - --enable-delegate-build=yes
+    prime:
+      - -usr/lib/pkgconfig
+      - -usr/include
+      - -usr/share
   halftone:
+    after: [ magick ]
     # See 'snapcraft plugins'
     plugin: meson
     source: https://github.com/tfuxu/Halftone.git
-    source-tag: '0.2.1'
+    source-tag: '0.3.0'
     meson-parameters:
       - --prefix=/snap/halftone/current/usr
       - -Dbuildtype=release
     override-pull: |
       craftctl default
       patch -p1 < $CRAFT_PROJECT_DIR/halftone.patch
-      pip install --prefix=$CRAFT_PART_INSTALL/usr Wand==0.6.11
+      pip install --prefix=$CRAFT_PART_INSTALL/usr Wand
     build-packages:
       - blueprint-compiler
       - execstack
     stage-packages:
-      - libmagickwand-6.q16-6
-      - libtiff5
-      - python3-libtiff
+      - libjpeg62
     override-build: |
       craftctl default
       mkdir -p $CRAFT_PART_INSTALL/meta/gui
@@ -43,7 +56,7 @@ parts:
       usr/local: usr
       usr/lib/python3: usr/lib/python3.10
     prime:
-      - -usr/share/doc
+      - -snap/halftone
 slots:
   halftone:
     interface: dbus
@@ -56,6 +69,8 @@ apps:
     extensions: [gnome]
     environment:
       PYTHONPATH: $SNAP/usr/lib/python3.10/dist-packages:$PYTHONPATH
+      MAGICK_HOME: $SNAP/usr
+      MAGICK_CODER_MODULE_PATH: $SNAP/usr/lib/
     plugs:
       - home
     
